--- a/javascript/index.html
+++ b/javascript/index.html
@@ -466,7 +466,7 @@
 
 <body>
     <header id="header">
-        <h1><a href="index.html" >Javascript</a></h1>
+        <h1><a href="index.html" >JavaScript</a></h1>
         <div style="margin:0 auto;
                     background-color: #f2f2f7;
                     width: 115px;
