--- a/javascript/effect/dataEffect01.html
+++ b/javascript/effect/dataEffect01.html
@@ -39,7 +39,9 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample01_result"></div>
+                        <div class="sample01_result">
+                            123456789101112131415161718192021222324252627282930313233343536373839404142434445464748495051525354555657585960616263646566676869707172737475767778798081828384858687888990919293949596979899100
+                        </div>
                     </details>
                 </div>
             </div>
@@ -47,7 +49,7 @@
             <div class="test_box">
                 <h3 class="title">1.2 for문을 이용해서 1부터 100까지 출력하시오!</h3>
                 <div class="code">
-<pre><code class="line-numbers language-js">for(let b=0; b<=100; b++){
+<pre><code class="line-numbers language-js">for(let b=1; b<=100; b++){
     sum = document.write(b);
 }
 </code></pre>
@@ -55,15 +57,19 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample02_result"></div>
+                        <div class="sample02_result">
+                            123456789101112131415161718192021222324252627282930313233343536373839404142434445464748495051525354555657585960616263646566676869707172737475767778798081828384858687888990919293949596979899100
+                        </div>
                     </details>
                 </div>
             </div>
             <div class="test_box">
                 <h3 class="title">1.3 while문을 이용해서 1부터 100까지 출력하시오! (짝수, 홀수)</h3>
                 <div class="code">
-<pre><code class="line-numbers language-js">
-asdasda
+<pre><code class="line-numbers language-js">let i=0;
+while(i<=100){
+    i%2==0 ? "<span style='color: red'>"+i+"</span>" : "<span style='color: blue'>"+i+"</span>")
+}
 </code></pre>
                 </div>
                 <div class="result">
@@ -76,13 +82,18 @@ asdasda
             <div class="test_box">
                 <h3 class="title">1.4 1부터 100까지의 합을 출력하기</h3>
                 <div class="code">
-<pre><code class="line-numbers language-js">
+<pre><code class="line-numbers language-js">let d = 0;
+for(let e=1; e<=100; e++){
+    d=e+d
+}
 </code></pre>
                 </div>
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample04_result"></div>
+                        <div class="sample04_result">
+                            5050
+                        </div>
                     </details>
                 </div>
             </div>
@@ -92,21 +103,21 @@ asdasda
 <script src="../assets/js/prism.min.js"></script>
 <script>
     //01
-    {
-        let a=1;
-        while(a<100){
-            a++;
-        }
-        document.querySelector(".sample01_result").innerHTML = a;
-    }
+    // {
+    //     let a=1;
+    //     while(a<100){
+    //         a++;
+    //     }
+    //     document.querySelector(".sample01_result").innerHTML = a;
+    // }
 
     //02
-    {
-        for(let b=0; b<=100; b++){
-            sum = document.write(b);
-        }
-        document.querySelector(".sample02_result").innerHTML = b;
-    }
+    // {
+    //     for(let b=0; b<=100; b++){
+    //         sum = document.write(b);
+    //     }
+    //     document.querySelector(".sample02_result").innerHTML = b;
+    // }
 
     //03
     // {
@@ -130,9 +141,11 @@ asdasda
     //test
     {
         let i=0;
-        while(i<=100){
-            (i%2==0) ? "<span style='color: red'>"+i+"</span>" : "<span style='color: blue'>"+i+"</span>")
+        while(i<100){
+            // i%2==0 ? "<span style='color: red'>"+i+"</span>" : "<span style='color: blue'>"+i+"</span>"
+            i++
         }
+        document.querySelector(".sample03_result").innerHTML = i%2==0 ? "<span style='color: red'>"+i+"</span>" : "<span style='color: blue'>"+i+"</span>";
     }
 </script>
 </html>
