--- a/javascript/study/study_22.09/web_site_text_case_two.html
+++ b/javascript/study/study_22.09/web_site_text_case_two.html
@@ -69,9 +69,12 @@
                         <h3 class="t_tit">텍스트 유형 홈페이지 만들기</h3>
                         <p class="t_desc">텍스트 유형 홈페이지를 만들어 보겠습니다~</p>
                         <hr>
-                        <h3>스프라이트</h3>
+                        <h3 class="t_tit2">스프라이트</h3>
                         <p>스프라이트는 아래와 같은 이미지를 이용해 하나의 이미지로 다양하게 사용해보겠습니다!</p>
                         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FewZhegdXfKs97FmXGSpvyx%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0-02%3Fnode-id%3D1%253A999" allowfullscreen></iframe>
+                        <hr>
+                        <h3 class="t_tit2">FIGMA</h3>
+                        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FewZhegdXfKs97FmXGSpvyx%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0-02%3Fnode-id%3D1%253A786" allowfullscreen></iframe>
                         <hr>
                         <h3 class="t_tit2">HTML</h3>
                         <p class="t_desc2">display:flex를 통해 하단의 HTML을 작성해서 기초가 될수있는 뼈대를 만들어 보도록 하겠습니다!</p>
@@ -125,8 +128,8 @@
     &lt;/section&gt;
 &lt;/body&gt;
 </code></pre>
-                            </div>
                         </div>
+                    </div>
                         <hr>
                         <h3 class="t_tit2">CSS</h3>
                         <p class="t_desc2">웹표준을 준수하기 위해 하단의 ir효과를 프로파일 이미지 부분에 사용해 웹표준을 준수하도록 유의하며 작성합니다.</p>
@@ -310,7 +313,7 @@
                         <hr>
                         <h3 class="t_tit2">완성</h3>
                         <p class="t_box">와~~~~~~~~~~~우 설레는 마음으로 완성된 예시를 한번 봅시다!!</p>
-                        <iframe style="width: 100%; height: 600px;" src="https://kimsangjunv1.github.io/coding/site/cardType/cardTypeToday.html" frameborder="0"></iframe>
+                        <iframe style="width: 100%; height: 600px;" src="https://kimsangjunv1.github.io/coding/site/cardType/cardTypeTodayTwo.html" frameborder="0"></iframe>
                         <div style="display:flex; justify-content:space-between; margin-left:20%; margin-right:20%;">
                             <div class="t_link">
                                 <a href="https://github.com/kimsangjunv1/coding/blob/main/site/cardType/cardTypeTodayTwo.html" target="blank">원본 소스 보기</a>
