--- a/site/cardType/cardTypeToday.html
+++ b/site/cardType/cardTypeToday.html
@@ -170,19 +170,19 @@
         <h2>대표적인 온라인 게임들.</h2>
         <div class="card_cont1">
             <div class="card_box one">
-                <div class="icon_box icon_1"></div>
+                <div class="icon_box icon_1"><span class="ir">망치 아이콘</span></div>
                 <h3>메이플스토리</h3>
                 <P>횡스크롤 RPG 게임을 대표하는 한국의 게임인 ‘메이플스토리'는 남녀노소가 다 좋아하는 모든 요소들을 고루 갖춰놓고 서비스..</P>
                 <span>더보기</span>
             </div>
             <div class="card_box two">
-                <div class="icon_box icon_2"></div>
+                <div class="icon_box icon_2"><span class="ir">하트 아이콘</span></div>
                 <h3>횡스크롤 RPG</h3>
                 <P>횡스크롤 알피지란 왼쪽에서 오른쪽으로 이동하며 즐길 수 있는 게임을 의미하며 대표적으로는 ‘메이플스토라', ‘귀혼', 기타등등...</P>
                 <span>더보기</span>
             </div>
             <div class="card_box three">
-                <div class="icon_box icon_3"></div>
+                <div class="icon_box icon_3"><span class="ir">나침반 아이콘</span></div>
                 <h3>레이싱 게임</h3>
                 <P>레이싱 게임이란 이름에서 나타나듯 달리면서 하는 게임을 지칭하며 보통의 널리 알려진 대표적인 게임으로는 ‘카트라이더', ‘레..</P>
                 <span>더보기</span>
@@ -190,19 +190,19 @@
         </div>
         <div class="card_cont2">
             <div class="card_box one">
-                <div class="icon_box icon_4"></div>
+                <div class="icon_box icon_4"><span class="ir">게임 아이콘</span></div>
                 <h3>슈팅게임</h3>
                 <P>총이나 어떠한 개체를 발사하며 상대방의 hP를 깎는것을 뜻하며 세간에 알려진 대표적인 온라인 게임은 ‘서든 어택'..</P>
                 <span>더보기</span>
             </div>
             <div class="card_box two">
-                <div class="icon_box icon_5"></div>
+                <div class="icon_box icon_5"><span class="ir">말풍선 아이콘</span></div>
                 <h3>디펜스 게임</h3>
                 <P>디펜스 게임이란 적들이 계속해서 들어오는것을 유저가 수시로 막고 지키는것을 의미하는 게임이며, ‘팔라독'과 같은 대표적인 ...</P>
                 <span>더보기</span>
             </div>
             <div class="card_box three">
-                <div class="icon_box icon_6"></div>
+                <div class="icon_box icon_6"><span class="ir">축구공 아이콘</span></div>
                 <h3>오펜스 게임</h3>
                 <P>오펜스 게임이란 디펜스 게임의 반대 개념으로 내가 상대방 진영에 쳐들어 가는 게임이며 요즈음 우리니라에서는 이런 종류의..</P>
                 <span>더보기</span>
