--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -775,6 +775,12 @@
             showContainer.classList.add("extend_menu_opacity_hide")
             showContainer.classList.remove("extend_menu_opacity_show")
         })
+        const modeBtn = document.querySelector(".mode__change__button__test")
+        const allCont = document.querySelector("html")
+
+        modeBtn.addEventListener("click",()=>{
+            allCont.classList.add("dark_main")
+        })
 
     </script>
 
