--- a/javascript/javascript12.html
+++ b/javascript/javascript12.html
@@ -290,6 +290,45 @@
                             </tbody>
                         </table>
                     </div>
+
+                    <div class="table left">
+                        <table>
+                            <colgroup>
+                                <col>
+                                <col>
+                                <col>
+                                <col>
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <td class="ce" rowspan="5">CSS</td>
+                                    <td >css()</td>
+                                    <td>.style</td>
+                                    <td>CSS 설정</td>
+                                </tr>
+                                <tr>
+                                    <td>.addClass()</td>
+                                    <td>.classList.add()</td>
+                                    <td>클래스 추가</td>
+                                </tr>
+                                <tr>
+                                    <td>.removeClass()</td>
+                                    <td>.classList.remove()</td>
+                                    <td>클래스 삭제</td>
+                                </tr>
+                                <tr>
+                                    <td>.toggleClass()</td>
+                                    <td>classList.toggle()</td>
+                                    <td>클래스 추가/삭제</td>
+                                </tr>
+                                <tr>
+                                    <td>.hasClass()</td>
+                                    <td>classList.contains()</td>
+                                    <td>클래스 포함(검색)여부</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
     
                     <div class="script">
                         <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
