--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="assets/css/image.css">    <!-- 공통 -->
     <link rel="stylesheet" href="assets/css/text.css">    <!-- 공통 -->
     <link rel="stylesheet" href="assets/css/header.css">    <!-- 공통 -->
+    <link rel="stylesheet" href="assets/css/imgText.css">    <!-- 공통 -->
 
 
 </head>
@@ -67,7 +68,7 @@
         </section>
         <!-- //sliderType -->
 
-        <div class="container section">
+        <!-- <div class="container section">
             <h2>강아지의 모든 모습!</h2>
             <p>세상에서 가장 귀여운 강아지의 모든 모습을 상상하고 세세하게 지켜만 보세요!!</p>
             <div class="card_container">
@@ -88,12 +89,55 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
+
+        <section id="imageType01" class="image__wrap nexon section">
+            <h2>육식 동물들</h2>
+            <p>사납고 무서운 동물들 리스트 입니다.</p>
+            <div class="image__inner container">
+                <article class="image img1">
+                    <h3 class="image__title">무서운 맹수 호랑이</h3>
+                    <p class="image__desc">
+                        호랑이는 무섭습니다. 무서운 맹수입니다. 호랑이는 사납습니다.
+                        호랑이는 매우 위협적인 동물입니다. 만나면 도망가야합니다.</p>
+                    <a class="image__btn" href="/" title="자세히 보기">자세히 보기</a>
+                </article>
+                <article class="image img2">
+                    <h3 class="image__title">사나운 맹수 늑대</h3>
+                    <p class="image__desc">
+                        늑대는 무섭습니다. 무서운 맹수입니다 늑대는 사납습니다.
+                        늑대는 매우 위협적인 동물입니다. 만나면 도망가야 합니다.</p>
+                    <a class="image__btn yellow" href="/" title="자세히 보기">자세히 보기</a>
+                </article>
+            </div>
+        </section>
         <!-- //imageType -->
 
-        <section id="imgTextType" class="imgText__wrap">
-            <h2>이미지/텍스트 영역</h2>
-        </section> 
+        <section id=imgTextType" class="imgText__wrap nexon section gray">
+            <h2 class="blind">유용한 사이트 살퍄ㅕ보기 🎮</h2>
+            <div class="imgText__inner container">
+                <div class="imgText__txt">
+                    <span>이미지 텍스트 유형01</span>
+                    <h3>유용한 사이트 살펴보기</h3>
+                    <p>웹 디자이너, 웹 퍼블리셔, 프론트앤드 개발자를 위한 유용한 사이트입니다.</p>       
+                    <ul>
+                        <li><a href="/">튜토리얼 사이트</a></li>
+                        <li><a href="/">레퍼런스 사이트</a></li>
+                        <li><a href="/">웹폰트 사이트</a></li>
+                        <li><a href="/">CSS 사이트</a></li>
+                        <li><a href="/">WebGL 사이트</a></li>
+                        <li><a href="/">Youtube 사이트</a></li>
+                    </ul>        
+                </div>
+                <div class="imgText__img img1">
+                    <a href="/">레퍼런스 사이트</a>
+                </div>
+                <div class="imgText__img img2">
+                    <a href="/" class="blue">튜토리얼 사이트</a>
+    
+                </div>
+            </div>
+        </section>
         <!-- //imgTextType -->
 
         <section id="cardType" class="card__wrap nexon section">
