--- a/site/imgTextType/imgTextType01.html
+++ b/site/imgTextType/imgTextType01.html
@@ -75,6 +75,9 @@
             text-align: center;
             margin-bottom: 70px;
         }
+        .gray{
+            background-color: #f5f5f5;
+        }
 
         /* cardType */
         .card__inner {
@@ -133,15 +136,85 @@
         .imgText__inner>div{
             width: 32%;
             height: 500px;
-            background-color: #ccc;
         }
         .imgText__txt{}
-        .imgText__img{}
+        .imgText__txt span{
+            font-size: 16px;
+            color: #666;
+            text-decoration: underline;
+            text-underline-position: under;
+            margin-bottom: 20px;
+        }
+        .imgText__txt h3{
+            font-size: 50px;
+            font-weight: 300;
+            word-break: keep-all;
+            line-height: 1.4;
+            margin-bottom: 20px;
+            margin-top: 20px;
+        }
+        .imgText__txt p{
+            font-size: 18px;
+            font-weight: 300;
+            line-height: 1.5;
+            color: #666;
+            margin-bottom: 10px;
+        }
+        .imgText__txt ul{
+            font-size: 18px;
+            font-weight: 300;
+            line-height: 1.6;
+        }
+        .imgText__txt ul li{
+            position: relative;
+            padding-left: 20px;
+        }
+
+        .imgText__txt ul li a{
+            color: #666;
+        }
+
+        .imgText__txt ul li::before{
+            content: '';
+            width: 5px;
+            height: 5px;
+            border-radius: 50%;
+            position: absolute;
+            left: 5px;
+            top: 9px;
+            background: #666;
+        }
+
+        .imgText__img{
+            border-radius: 10px;
+            position: relative;
+        }
+
+        .imgText__img a{
+            position: absolute;
+            left: 30px;
+            bottom: 30px;
+            background-color: #7c2b39;
+            color: #fff;
+            font-size: 18px;
+            padding: 10px 30px;
+            border-radius: 30px;
+            display: inline-block;
+        }
+        .imgText__img a.blue{
+            background-color: #2b387c;
+        }
+        .imgText__img.img1{
+            background: url(img/imgText_bg01.jpg) no-repeat center / cover;
+        }
+        .imgText__img.img2{
+            background: url(img/imgText_bg02.jpg) no-repeat center / cover;
+        }
     </style>
 </head>
 
 <body>
-    <section id=imgTextType" class="imgText__wrap nexon section">
+    <section id=imgTextType" class="imgText__wrap nexon section gray">
         <h2 class="blind">유용한 사이트 살퍄ㅕ보기 🎮</h2>
         <div class="imgText__inner container">
             <div class="imgText__txt">
@@ -161,7 +234,7 @@
                 <a href="/">레퍼런스 사이트</a>
             </div>
             <div class="imgText__img img2">
-                <a href="/">튜토리얼 사이트</a>
+                <a href="/" class="blue">튜토리얼 사이트</a>
 
             </div>
         </div>
